--- a/site/blueprints/users/editor.yml
+++ b/site/blueprints/users/editor.yml
@@ -1,33 +1,8 @@
 title: Editor
+extends: users/default
+
 permissions:
-  access:
-    panel: true
-    users: true
-    site: true
-  site:
-    update: false
   pages:
-    create: true
-    changeTemplate: true
-    changeTitle: true
-    changeURL: true
-    hide: true
-    sort: true
-    update: true
     delete: true
   users:
-    create: false
-    createAvatar: true
-    deleteAvatar: false
-    changeName: false
-    changeEmail: false
-    changePassword: false
-    changeRole: false
-    delete: false
-    update: false
-  files:
-    create: true
-    changeName: true
-    delete: true
-    replace: true
     update: false
