--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -5,7 +5,7 @@ files:
 fields:
   text:
     label: Description
-    type: markdown
+    type: textarea
     size: large
     buttons:
       - link
