--- a/site/blueprints/pages/home.yml
+++ b/site/blueprints/pages/home.yml
@@ -3,5 +3,17 @@ preset: page
 pages: false
 files: false
 fields:
-  hidden:
-    type: hidden
+  blocks:
+    label: Intro
+    type: builder
+    columns: 1
+    fieldsets:
+      images:
+        label: Images
+        fields:
+          files:
+            type: files
+            query: kirby.collection('index').files.template('image')
+            uploads: image
+            layout: cards
+            size: tiny
