--- a/site/blueprints/sections/blocks.yml
+++ b/site/blueprints/sections/blocks.yml
@@ -15,31 +15,69 @@ fields:
             uploads: image
             layout: cards
             size: tiny
-      embed:
-        label: Embed
-        snippet: blocks/embed
+      vimeo:
+        label: Vimeo
+        snippet: blocks/vimeo
         fields:
-          oembed:
-            label: Embed
-            type: embed
-            width: 1/2
-          text:
-            label: Caption
-            type: textarea
-            size: medium
-            width: 1/2
-            buttons:
-              - link
-              - email
-              - italic
-      text:
-        label: Text
-        snippet: blocks/text
-        fields:
-          text:
-            type: textarea
-            size: medium
-            buttons:
-              - link
-              - email
-              - italic
+          page:
+            type: pages
+            multiple: false
+            layout: cards
+            query: site.find('vimeo').children
+            image:
+              cover: false
+              ratio: 3/2
+              back: black
+              query: page.cover.toFile
+          # text:
+          #   label: Caption
+          #   type: textarea
+          #   size: small
+          #   uploads: file
+          #   width: 1/2
+          #   buttons:
+          #     - link
+          #     - email
+          #     - file
+          muted:
+            label: Muted
+            type: toggle
+            default: true
+            text:
+              - 'No'
+              - 'Yes'
+            width: 1/3
+          loop:
+            label: Loop
+            type: toggle
+            default: false
+            text:
+              - 'No'
+              - 'Yes'
+            width: 1/3
+          controls:
+            label: Controls
+            type: toggle
+            default: false
+            text:
+              - 'No'
+              - 'Yes'
+            width: 1/3
+      # embed:
+      #   label: Embed
+      #   snippet: blocks/embed
+      #   fields:
+      #     oembed:
+      #       label: Embed
+      #       type: embed
+      # text:
+      #   label: Text
+      #   snippet: blocks/text
+      #   fields:
+      #     text:
+      #       type: textarea
+      #       size: medium
+      #       buttons:
+      #         - link
+      #         - email
+      #         - italic
