--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,6 +6,11 @@
 # enable awesome urls. i.e.:
 # http://yourdomain.com/about-us/team
 RewriteEngine on
+# RewriteCond %{HTTP_HOST} !=localhost
+# RewriteCond %{HTTP_HOST} ^www\. [NC,OR]
+# RewriteCond %{HTTPS} off
+# RewriteCond %{HTTP_HOST} ^(?:www\.)?(.+)$ [NC]
+# RewriteRule ^ https://%1%{REQUEST_URI} [R=301,L,NE]
 
 # make sure to set the RewriteBase correctly
 # if you are running the site in a subfolder.
